# bib_redirector

./: .gitignore  README.md
bib_redirector/: Cargo.toml
bib_redirector/src/: lib.rs  main.rs
bib_redirector/src/templates/: tera_test.tera
