[package]
name = "bib_redirector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
regex = "1"
rocket = "0.5.0-rc.1"
serde = "1"
serde_json = "1"

[dependencies.rocket_dyn_templates]
features = ["tera"]
