[package]
name = "bib_redirector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chrono = "0.4.19"
#env_logger = "0.9"
#log = "0.4.14"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
regex = "1"
rocket = "0.5.0-rc.1"
serde = "1"
serde_json = "1"

#rocket_contrib = { version = "0.4.10", features = ["tera"] }

#[dependencies.rocket_dyn_templates]
#path = "../../contrib/dyn_templates"
#features = ["tera"]

#[dependencies.rocket_contrib]
#version = "0.4.10"
#default-features = false
#features = ["tera"]
